# AndroidPtraceInject

./: .gitignore  Cargo.toml  README.md  build.rs  makefile
Inject/: CMakeLists.txt  PtraceInject.c  inject.cpp
Inject/Utils/: PtraceUtils.h  Utils.h
Inject/include/: PtraceInject.h
Inject/include/Utils/: PtraceUtils.h
src/: error.rs  ffi.rs  lib.rs  main.rs
