[package]
name = "inject"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.release]
codegen-units = 1
lto = 'fat'
opt-level = 3
strip = true
panic = 'abort'

[build-dependencies]
anyhow = "1.0.75"
cc = "1.0.83"
