[package]
name = "ptrace-inject-android"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "android端ptrace注入so"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.152"
thiserror = "1.0.56"

[profile.release]
codegen-units = 1
lto = 'fat'
opt-level = 3
strip = true
panic = 'abort'

[build-dependencies]
anyhow = "1.0.79"
cc = "1.0.83"
